--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://fadhilmufid.github.io/reactjs_start/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -53,6 +56,7 @@
     "@editorjs/raw": "^2.3.1",
     "@editorjs/simple-image": "^1.4.1",
     "@editorjs/table": "^2.0.2",
-    "@editorjs/warning": "^1.2.0"
+    "@editorjs/warning": "^1.2.0",
+    "gh-pages": "^3.2.3"
   }
 }
