--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://fadhilmufid.github.io/reactjs_start/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +10,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-editor-js": "^2.0.6",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
